--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>hmuy</title>
+    <title>qilskcter</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -22,10 +22,10 @@
     </div>
     <ul class="profile-social-links">
         <li>
-            <a href="https://facebook.com/unprofessionalunprofessional" title="shitposts when twitter is too toxic"><img src="assets/facebook.svg" alt="facebook" class="social"></a>
+            <a href="https://www.facebook.com/ndkjailbreak/" title="i just use Facebook"><img src="assets/facebook.svg" alt="facebook" class="social"></a>
         </li>
         <li>
-            <a href="https://github.com/khanhmuy" title="bad stuff"><img src="assets/github.svg" alt="github" class="social"></a>
+            <a href="https://github.com/qilskcter" title="my Github"><img src="assets/github.svg" alt="github" class="social"></a>
         </li>
     </ul>
 </div>
