--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>qilskcter</title>
     <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
 <div class="profile-card">
