--- a/404.html
+++ b/404.html
@@ -4,6 +4,8 @@
         <title>404, something's missing</title>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet" />
         <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
     </head>
     <style>
         body {
