--- a/index.html
+++ b/index.html
@@ -1,41 +1,87 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>qilskcter</title>
-    <link rel="stylesheet" href="style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet" />
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="user-scalable=yes" content="width=device-width, initial-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <title>Nguyen Dinh Khanh</title>
+    <link rel="stylesheet" type="text/css" href="./assets/css/animate.css"/>
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Licorice&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script src="Flower.js"></script>
-  </head>
-  <body>
-<div class="profile-card">
-    <header>
-        <a href="#"><img src="http://github.com/qilskcter.png" alt="Admin" />
-        </a>
-        <h1>qilskcter</h1>
-        <h2>- Developer -</h2>
-    </header>
-    <div class="profile-bio">
-        <p>Something about me</p>
-        <p>I just a Developer, I like something like Hackintosh and I'm working on it.
-            <br/> I have something special, but it will coming soon...
-            <br/>
-            <center><a class="btn btn-xs btn-primary" href="https://github.com/qilskcter/Dell-Vostro-3460-Hackintosh">My Hackintosh EFI</a></center>
-        </p>
+</head>
+
+<body>
+
+   <div class="animated fadeInDown" id="topnavbar">
+<br>
+<br>
+
+<div id="supporticons">
+
+        <div class="hovershadow" id="githubicon" onclick="location.href='https://github.com/qilskcter'">       
+        </div>
+
+        <div class="hovershadow" id="facebookicon" onclick="location.href='https://reddit.com/user/alex_png'">       
+        </div>
+
+</div>
+   </div>
+
+<div class="headhov">
+    <div class="animated count pulse" id="header" onclick="location.href='https://qilskcter.github.io'">
+
     </div>
-    <ul class="profile-social-links">
-        <li>
-        <br>
-        <br>
-            <a href="https://www.facebook.com/ndkjailbreak/" title="i just use Facebook"><img src="assets/facebook.svg" alt="facebook" class="social"></a>
-        </li>
-        <li>
-        <br>
-            <a href="https://github.com/qilskcter" title="my Github"><img src="assets/github.svg" alt="github" class="social"></a>
-        </li>
-    </ul>
+</div>
+
+    <div class="filter animated fadeInUp" id="repotitle">
+        qilskcter
+    </div>
+
+    <div class="filter animated fadeInUp" id="repodesc">
+        Developer and Hackintosher
+    </div>
+<br>
+<center>
+<img src="./assets/tag.png" style="width: 100px; height: 100px" class="filter animated fadeInUp">
+</center>
+<br>
+    <div style="margin-left: 30px; margin-right: 30px" class="filter animated fadeInUp" id="clickto">
+Something about me
+<br>
+I just a Developer, I like something like Hackintosh and I'm working on it.
+<br>
+I have something special, but it will coming soon...
+    </div>
+
+<div style="margin-top: 60px; margin-bottom: 90px; class="animated fadeIn2">
+
+<center>
+
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="sileoblur zoom">
+  <div class="sileoblur-inside">
+    <img onclick="location.href='https://github.com/qilskcter/Dell-Vostro-3460-Hackintosh';" src="./assets/clover.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">My EFI</div>
+</div>
+</center>
+
+</div>
+<p style="text-align:center;"><img src="https://raw.githubusercontent.com/qilskcter/Dell-Vostro-3460-Hackintosh/main/Screenshots/Mojave.png"style="width:100%;height:auto;">
+<br>
+<br>
+<br>
+
+<div class="animated fadeInUp" id="bottomnavnar">
+<br>
+<div>Website Developed by alex_png  ©  2020</div>
 </div>
 </body>
 </html>
