--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="hovershadow" id="githubicon" onclick="location.href='https://github.com/qilskcter'">       
         </div>
 
-        <div class="hovershadow" id="facebookicon" onclick="location.href='https://reddit.com/user/alex_png'">       
+        <div class="hovershadow" id="facebookicon" onclick="location.href='https://www.facebook.com/ndkjailbreak'">       
         </div>
 
 </div>
