--- a/jailbreak/info/WhiteColorful/index.html
+++ b/jailbreak/info/WhiteColorful/index.html
@@ -5,7 +5,7 @@ Theme WhiteColorful
 <br>
 <li>
 Bạn có thể tải và phát triển thêm
-<a class="btn btn-xs btn-primary" href="https://ndk-jailbreak.github.io/debs/com.ndk.whitecolorful_1.0_iphoneos-arm.deb">ở đây</a>
+<a class="btn btn-xs btn-primary" href="https://qilskcter.github.io/jailbreak/debs/com.ndk.whitecolorful_1.0_iphoneos-arm.deb">ở đây</a>
 </span></li></lable><br>
 <ul class="screenshot-viewer">
 
